--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
         text: Home
       - href: blog.qmd
         text: Blog
+      - href: index.qmd#References
+        text: References
 
 
 format:
