--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ format:
     theme:
       light: [litera, styles.scss]
     highlight-style: a11y-dark
-    mainfont: "Roboto"
+    mainfont: "Montserrat"
     code-copy: true
     code-overflow: wrap
 
